fix: Make scroll indicator at the top of everything (z-index)

--- a/src/styles/_scrollIndicator.scss
+++ b/src/styles/_scrollIndicator.scss
@@ -3,6 +3,7 @@
     width: 0;
     position: fixed;
     top: 0;
+    z-index: 999;
     background-color: $accent-color;
     animation: widen;
     animation-timeline: scroll();
